<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reload"
        android:icon="@drawable/ic_reload"
        android:title="@string/reload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/info"
        android:icon="@drawable/info"
        android:title="@string/info_message"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_activity_impostazioni"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>